--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,28 +30,29 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- 프래그먼트가 들어갈 공간 -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/dark_mode_button"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+    <!-- 안내 텍스트 -->
+    <TextView
+        android:id="@+id/connect_text"
+        style="@style/SubTitle"
+        android:text="친구와\n연결해주세요!"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="200dp"/>
 
-    <!-- 하단 네비게이션 -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="0dp"
-        android:layout_height="65dp"
-        android:background="?android:windowBackground"
-        app:itemIconSize="36dp"
-        app:itemIconTint="?android:textColorPrimary"
-        app:menu="@menu/bottom_nav_menu"
-        app:labelVisibilityMode="unlabeled"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <!-- 느낌표 아이콘 -->
+    <TextView
+        android:id="@+id/exclamation_icon"
+        android:layout_width="60dp"
+        android:layout_height="180dp"
+        android:text="!"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="150sp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/connect_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="60dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
