--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_darkmode"
-        android:background="@android:color/transparent"
         app:tint="?android:textColorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,20 +27,34 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="25dp"
         android:src="@drawable/ic_setting"
-        android:background="@android:color/transparent"
         app:tint="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- 프래그먼트가 들어갈 공간 -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/dark_mode_button"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+    <!-- 안내 텍스트 -->
+    <TextView
+        android:id="@+id/connect_text"
+        style="@style/SubTitle"
+        android:text="친구와\n연결해주세요!"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="200dp"/>
+
+    <!-- 느낌표 아이콘 -->
+    <TextView
+        android:id="@+id/exclamation_icon"
+        android:layout_width="60dp"
+        android:layout_height="180dp"
+        android:text="!"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="150sp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/connect_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="60dp"/>
 
     <!-- 하단 네비게이션 -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
