--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
         android:id="@+id/dark_mode_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
         android:layout_marginTop="60dp"
+        android:layout_marginStart="25dp"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_darkmode"
         app:tint="?android:textColorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- 설정 버튼 (오른쪽) -->
     <ImageButton
@@ -26,11 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="25dp"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_setting"
         app:tint="?android:textColorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
     <!-- 안내 텍스트 -->
     <TextView
         android:id="@+id/connect_text"
