--- a/app/src/main/res/layout/activity_write_diary.xml
+++ b/app/src/main/res/layout/activity_write_diary.xml
@@ -60,14 +60,6 @@
         android:gravity="center_horizontal"
         android:layout_marginBottom="8dp">
 
-        <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/ic_add"
-            android:elevation="5dp"
-            android:background="@drawable/rounded_circle"
-            android:contentDescription="감정 추가" />
-
         <View
             android:id="@+id/color_circle"
             android:layout_width="48dp"
@@ -81,7 +73,7 @@
         android:id="@+id/tvSelectedEmotion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="😐 감정을 선택하세요"
+        android:text="감정을 선택하세요"
         android:textSize="16sp"
         android:textColor="?android:textColorPrimary"
         android:layout_gravity="center_horizontal"
