--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,16 +63,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- 아이디/비번 찾기 -->
-    <TextView
-        android:id="@+id/find_info"
-        style="@style/FindInfoText"
-        android:text="아이디 찾기 | 비밀번호 찾기"
-        android:textColor="?android:textColorSecondary"
+    <!-- 아이디/비밀번호 찾기: 두 개로 분리 -->
+
+    <LinearLayout
+        android:id="@+id/find_info_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/password_input"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/find_id_text"
+            style="@style/FindInfoText"
+            android:text="아이디 찾기"
+            android:textColor="?android:textColorSecondary"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <TextView
+            android:id="@+id/find_pw_text"
+            style="@style/FindInfoText"
+            android:text="  |  비밀번호 찾기"
+            android:textColor="?android:textColorSecondary"
+            android:clickable="true"
+            android:focusable="true" />
+
+    </LinearLayout>
 
     <!-- 로그인 버튼 -->
     <Button
@@ -80,7 +99,7 @@
         style="@style/BlackRoundedButton"
         android:text="로그인"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/find_info"
+        app:layout_constraintTop_toBottomOf="@id/find_info_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
